Added all the html pages.

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,29 +15,17 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html"> Should Recreational Marijuana be Legalized?</a>
+      <a class="navbar-brand" href="conclusion.html"> Should Recreational Marijuana be Legalized?</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-              <a class="nav-link" href="population.html">Population <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="employment.html">Employment <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="gdp.html">GDP <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="taxrevenue.html">Tax Revenue <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="comparison.html">Comparison <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="data.html">Data</a>
+              <a class="nav-link" href="observations.html">Observations <span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
@@ -54,7 +42,7 @@
             </div>
             <div class = "row align-items-center">
               <div class = "col-sm-12">
-                <img class = "img-fluid floater" width="500" src="../Images/1-project-icon.jpg" alt="Project Icon">
+                <img class = "img-fluid floater" width="500" src="../Images/1-Project2-Icon.jpg" alt="Project Icon">
                 <p>Recreational marijuana is always a hotly debated subject. 
                    Through this project, we wanted to understand the Impact of legalizing recreational Marijuana on the States.
                 </p>
