--- a/templates/observations.html
+++ b/templates/observations.html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Conclusion</title>
+    <title>Takeaways</title>
   </head>
 
   <body>
