--- a/templates/conclusion.html
+++ b/templates/conclusion.html
@@ -14,22 +14,29 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Impacts of Marijuana Legalization</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-              <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="observations.html">Observations <span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">
+              <td id="nav1" colspan="2">
+              <img src="../Images/0-Logo.png" alt="This is my sites logo">
+          </a>
+          <a class="navbar-brand" href="index.html">Home</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                  <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                  <a class="nav-link" href="observations.html">Observations <span class="sr-only">(current)</span></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
     <div class = "container-fluid">
       <div class = "row align-items-center">
@@ -37,7 +44,7 @@
           <div class = "container sub">
             <div class = "row align-items-center">
               <div class = "col-sm-12">
-                <h1>Why Should We Legalize?</h1>
+                <h1>Why should we legalize?</h1>
               </div>
             </div>
             <div class = "row align-items-center">
