--- a/templates/index.html
+++ b/templates/index.html
@@ -13,92 +13,54 @@
     <title>Marijuana Legalization</title>
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="conclusion.html"> Should Recreational Marijuana be Legalized?</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
+<body>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+            <td id="nav1" colspan="2">
+            <img src="../Images/0-Logo.png" alt="This is my sites logo">
+          </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
               <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
               <a class="nav-link" href="observations.html">Observations <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+              <a class="nav-link" href="conclusion.html"> Why should we legalize?<span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
-    </nav>
-
-    <div class = "container-fluid">
-      <div class = "row align-items-start">
-        <div class = "col-sm-8">
-          <div class = "container sub">
-            <div class = "row align-items-start">
-              <div class = "col-sm-12">
-                <h1>Impacts of Marijuana Legalization</h1>
-              </div>
-            </div>
-            <div class = "row align-items-center">
-              <div class = "col-sm-12">
-                <img class = "img-fluid floater" width="500" src="../Images/1-Project2-Icon.jpg" alt="Project Icon">
-                <p>Recreational marijuana is always a hotly debated subject. 
-                   Through this project, we wanted to understand the Impact of legalizing recreational Marijuana on the States.
-                </p>
-                <p>We will be doing an exploration of the impacts of the legalization of Recreational Marijuana, by studying key factors like GDP, Sales Tax Revenue, Population, Employment etc. and to draw out a comparison between pre-legalization vs post-legalization years. 
-                  Through our project, we aim to study and understand several facts and figures to find the answer for ourselves, is the criticism of recreational marijuana fair?
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class = "col-sm-4">
-          <div class = "container sub">
-            <div class = "row align-items-center">
-              <div class = "col-sm-12">
-                <h1>Key Factors Analysis</h1>
-              </div> 
-            </div>
-            <div class = "row align-items-center">
-              <div class = "col-sm-6 pict">
-                <a target = "_blank" href="maxtemp.html">
-                  <img class = "img-fluid" width="200" src="../Images/2-Population.jpg" alt="Population">
-                </a>
-              </div>
-              <div class = "col-sm-6 pict">
-                <a target="_blank" href="humidity.html">
-                  <img class = "img-fluid" width="200" src="../Images/3-Employment.jpg" alt="Employment">
-                </a>
-              </div>
-            </div>
-            <div class = "row align-items-center">
-              <div class = "col-sm-6 pict">
-                <a target="_blank" href="cloudiness.html">
-                  <img class = "img-fluid" width="200" src="../Images/4-GDP.jpg" alt="GDP">
-                </a>
-              </div>
-              <div class = "col-sm-6 pict">
-                <a target="_blank" href="windspeed.html">
-                  <img class = "img-fluid" width="200" src="../Images/5-Tax-Revenue.jpeg" alt="Tax Revenue">
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
+  </nav>
+  
+  <!-- Page Content -->
+  <div class="container">
+    <h1 class="mt-4">Impacts of Marijuana Legalization</h1>
+    <p>Recreational marijuana is always a hotly debated subject. 
+        Through this project, we wanted to understand the Impact of legalizing recreational Marijuana on the States.
+     </p>
+     <p>We will be doing an exploration of the impacts of the legalization of Recreational Marijuana, by studying key factors like GDP, Sales Tax Revenue, Population, Employment etc. and to draw out a comparison between pre-legalization vs post-legalization years. 
+       Through our project, we aim to study and understand several facts and figures to find the answer for ourselves, is the criticism of recreational marijuana fair?
+     </p>
+  </div>
+  <!-- /.container -->
 
-
-    <div class="footer">
-	  <p> &#169;Copyright Coding Bootcamp 2018</p>
-	</div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="js/bootstrap.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
-</html>
+  <div class="footer">
+      <p> &#169;Copyright Coding Bootcamp 2018</p>
+    </div>
+  
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <!-- <script src="js/bootstrap.min.js"></script> -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    </body>
+  </html>
