Clean visuals and add responsive functionality.

--- a/templates/visuals.html
+++ b/templates/visuals.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>Marijuana Economy</title>
+		<title>Herb Charts</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -20,8 +20,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<div id="line">
-					</div>
+					<div id="line" class ="svg-container"></div>
 				</div>
 			</div>
 		</div>
@@ -29,7 +28,6 @@
 		<div id="footer">
 		</div>
 
-		<div class="chart"></div>
 		<script src="../static/js/data.js"></script>
   	<script type="text/javascript" src="../static/js/app.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
