--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,19 +1,34 @@
 .green {
-  stroke: green;
+  stroke: steelblue;
 }
 
 .x-axis {
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .y-axis {
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .state-group {
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .metric-group {
   font-size: 20px;
+}
+
+.svg-container {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+    vertical-align: top;
+    overflow: hidden;
+}
+.svg-content {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
