--- a/templates/conclusion.html
+++ b/templates/conclusion.html
@@ -28,11 +28,11 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                  <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item active">
-                  <a class="nav-link" href="observations.html">Observations <span class="sr-only">(current)</span></a>
-              </li>
+                <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="statisticalAnalysis.html">Statistical Analysis <span class="sr-only">(current)</span></a>
+          </li>
             </ul>
           </div>
         </div>
@@ -49,7 +49,7 @@
             </div>
             <div class = "row align-items-center">
               <div class = "col-sm-12">
-                <img class = "img-fluid floater" width="500" src="../Images/8-Conclusion-Gif.gif" alt="Max Temp">
+                <img class = "img-fluid floater" width="500" src="../Images/4-Conclusion-Gif.gif" alt="Elon Musk">
               </div>
             </div>
             <div class = "row align-items-center">
