--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,10 @@
               <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-              <a class="nav-link" href="observations.html">Observations <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="statisticalAnalysis.html">Statistical Analysis <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-              <a class="nav-link" href="conclusion.html"> Why should we legalize?<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="conclusion.html"> Conclusion <span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
@@ -62,13 +62,14 @@
   </div>
   <!-- /.container -->
 
-  <div id="map"></div>
+  <div id="map">
+    <!-- API key -->
+    <script type="text/javascript" src="../static/js/config.js"></script>
+    <!-- Our JS -->
+    <script type="text/javascript" src="../static/js/logic.js"></script>
+  </div>
 
-  <!-- API key -->
-  <script type="text/javascript" src="../static/js/config.js"></script>
-  <!-- Our JS -->
-  <script type="text/javascript" src="../static/js/logic.js"></script>
-
+  
   <div class="footer">
       <p> &#169;Copyright Coding Bootcamp 2018</p>
     </div>
