--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,8 +8,9 @@ body {
 #map,
 body,
 html {
-  height: 100%;
-}
+  height: 90%;
+  margin: 20px;
+} 
 
 body {
   background-color: #ebeaed;
@@ -53,6 +54,10 @@ p {
   text-align: left;
 }
 
+img { 
+  display:block; 
+}
+
 .pict {
   padding: 10px;
 }
@@ -63,7 +68,6 @@ p {
 }
 
 .footer {
-  position: fixed;
   right:0;
   bottom:0;
   left:0;
