--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -31,11 +31,11 @@
               <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-              <a class="nav-link" href="observations.html">Observations <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-              <a class="nav-link" href="conclusion.html"> Why should we legalize?<span class="sr-only">(current)</span></a>
-          </li>
+            <a class="nav-link" href="statisticalAnalysis.html">Statistical Analysis <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="conclusion.html"> Conclusion <span class="sr-only">(current)</span></a>
+        </li>
         </ul>
       </div>
     </div>
@@ -44,9 +44,9 @@
   <!-- Page Content -->
   <div class="container">
     <h1 class="mt-4">Data Analysis</h1>
-    <p> Analysis parts needs to be added.
-     </p>
+    <p> Analysis parts needs to be added.</p>
   </div>
+
   <!-- /.container -->
 
   <div class="footer">
