--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,12 +10,14 @@
   font-size: 14px;
 }
 
-.state-group {
+.state {
   font-size: 14px;
 }
 
-.metric-group {
-  font-size: 20px;
+.metric {
+  font-size: 14px;
+  /* border-style: solid;
+  border-width: 5px; */
 }
 
 .svg-container {
@@ -31,4 +33,8 @@
     position: absolute;
     top: 0;
     left: 0;
+}
+
+h2 {
+  text-align: center;
 }
