--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="../static/css/style.css">
 
-    <title>Data Analysis</title>
+    <title>Marijuana Legalization</title>
+     <!-- Leaflet CSS & JS -->
+      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+      integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+      crossorigin=""/>
+      <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+      integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+      crossorigin=""></script>
+
+      <!-- Our CSS -->
+      <link rel="stylesheet" type="text/css" href="../static/css/style.css">
   </head>
 
 <body>
@@ -21,10 +28,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <td id="nav1" colspan="2">
-        <img src="../Images/0-Logo.png" alt="This is my sites logo">
-    </a>
-    <a class="navbar-brand" href="index.html">Home</a>
+            <td id="nav1" colspan="2">
+            <img src="../Images/0-Logo.png" alt="This is my sites logo">
+          </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -34,27 +40,35 @@
               <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="statisticalAnalysis.html">Statistical Analysis <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-            <a class="nav-link" href="conclusion.html"> Conclusion <span class="sr-only">(current)</span></a>
-        </li>
+              <a class="nav-link" href="statisticalAnalysis.html">Statistical Analysis <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+              <a class="nav-link" href="conclusion.html"> Conclusion <span class="sr-only">(current)</span></a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- Page Content -->
-  <div class="container-fluid">
-    <h1 class="mt-4">Data Analysis</h1>
-			<div class="row">
-				<div class="col-md-12">
-					<div id="line" class ="svg-container"></div>
-				</div>
-			</div>
+  <div class="container">
+    <h1 class="mt-4">Impacts of Marijuana Legalization</h1>
+    <p>Recreational marijuana is always a hotly debated subject.
+        Through this project, we wanted to understand the Impact of legalizing recreational Marijuana on the States.
+     </p>
+     <p>We will be doing an exploration of the impacts of the legalization of Recreational Marijuana, by studying key factors like GDP, Sales Tax Revenue, Population, Employment etc. and to draw out a comparison between pre-legalization vs post-legalization years.
+       Through our project, we aim to study and understand several facts and figures to find the answer for ourselves, is the criticism of recreational marijuana fair?
+     </p>
+  </div>
+  <!-- /.container -->
+
+  <div id="map">
+    <!-- API key -->
+    <script type="text/javascript" src="../static/js/config.js"></script>
+    <!-- Our JS -->
+    <script type="text/javascript" src="../static/js/logic.js"></script>
   </div>
 
-  <!-- /.container -->
 
   <div class="footer">
       <p> &#169;Copyright Coding Bootcamp 2018</p>
@@ -63,8 +77,6 @@
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <!-- <script src="js/bootstrap.min.js"></script> -->
-      <script src="../static/js/data.js"></script>
-    	<script type="text/javascript" src="../static/js/app.js"></script>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
