Updated the index.html.

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,7 @@
      <p>We will be doing an exploration of the impacts of the legalization of Recreational Marijuana, by studying key factors like GDP, Sales Tax Revenue, Population, Employment etc. and to draw out a comparison between pre-legalization vs post-legalization years.
        Through our project, we aim to study and understand several facts and figures to find the answer for ourselves, is the criticism of recreational marijuana fair?
      </p>
+     <h3 class="mt-4">States that have legalized Recreational Marijuana</h3>
   </div>
   <!-- /.container -->
 
