Updated the footer.

--- a/templates/conclusion.html
+++ b/templates/conclusion.html
@@ -74,7 +74,7 @@
             </div>
           </div>
           <div class="footer">
-            <p> &#169;Copyright Coding Bootcamp 2018</p>
+            <p> &#169;Copyright Group 1: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
           </div>
         </div>
 
