--- a/templates/index.html
+++ b/templates/index.html
@@ -72,8 +72,8 @@
 
 
   <div class="footer">
-      <p> &#169;Copyright Coding Bootcamp 2018</p>
-    </div>
+      <p> &#169;Copyright Group 1: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
+  </div>
 
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
