Updated the statisticalAnalysis.html

--- a/templates/conclusion.html
+++ b/templates/conclusion.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="analysis.html">Data Visualization  <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="statisticalAnalysis.html">Statistical Analysis <span class="sr-only">(current)</span></a>
@@ -57,16 +57,16 @@
                 <p>
                   <ul>
                     <li>
-                        Reduce harm
+                        Job creation
                     </li>
                     <li>
-                        Create jobs
+                        Wealth and revenue for Government
                     </li>
                     <li>
-                        Save money
+                        Reduction in crime and black market activities
                     </li>
                     <li>
-                        Promote consumer safety
+                        Consumer safety
                     </li>
                   </ul>
                 </p>
@@ -74,7 +74,7 @@
             </div>
           </div>
           <div class="footer">
-            <p> &#169;Copyright Group 1: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
+            <p> &#169;Copyright Group: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
           </div>
         </div>
 
