--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-              <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="analysis.html">Data Visualization  <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="statisticalAnalysis.html">Statistical Analysis <span class="sr-only">(current)</span></a>
@@ -46,7 +46,7 @@
 
   <!-- Page Content -->
   <div class="container-fluid">
-    <h1 class="mt-4">Data Analysis</h1>
+    <h1 class="mt-4">Data Visualization</h1>
 			<div class="row">
 				<div class="col-md-12">
 					<div id="line" class ="svg-container"></div>
@@ -57,7 +57,7 @@
   <!-- /.container -->
 
   <div class="footer">
-      <p> &#169;Copyright Group 1: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
+      <p> &#169;Copyright Group: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
   </div>
 
       <!-- Optional JavaScript -->
