--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-              <a class="nav-link" href="analysis.html">Data Analysis  <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="analysis.html">Data Visualization  <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
               <a class="nav-link" href="statisticalAnalysis.html">Statistical Analysis <span class="sr-only">(current)</span></a>
@@ -72,7 +72,7 @@
 
 
   <div class="footer">
-      <p> &#169;Copyright Group 1: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
+      <p> &#169;Copyright Group: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
   </div>
 
       <!-- Optional JavaScript -->
