--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,6 +83,14 @@ h6 {
   padding: 5px 5px 5px 5px;
 }
 
+.navbar-brand {
+  font-size: 24px;
+}
+
+.nav-link {
+  font-size: 24px;
+}
+
 td#nav1 * {
     float: left;
  }
