--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -46,7 +46,7 @@
 
   <!-- Page Content -->
   <div class="container-fluid">
-    <h1 class="mt-4">Data Visualizations</h1>
+    <!-- <h1 class="mt-4">Data Visualizations</h1> -->
 		<div id="line" class ="svg-container"></div>
   </div>
 
