--- a/templates/conclusion.html
+++ b/templates/conclusion.html
@@ -44,23 +44,39 @@
           <div class = "container sub">
             <div class = "row align-items-center">
               <div class = "col-sm-12">
-                <h1>Why should we legalize?</h1>
+                <h1>Should we legalize? Sure, why not?</h1>
               </div>
             </div>
             <div class = "row align-items-center">
-              <div class = "col-sm-12">
+              <div class = "col-sm-4">
                 <img class = "img-fluid floater" width="500" src="../Images/4-Conclusion-Gif.gif" alt="Elon Musk">
               </div>
+              <div class = "col-sm-8">
+                <ul>
+                  <li>
+                      Confirmed economic growth
+                  </li>
+                  <li>
+                      No demonstrated negative effects on crime, population, or employment.
+                  </li>
+                  <!-- <li>
+                      Reduction in crime and black market activities
+                  </li>
+                  <li>
+                      Consumer safety
+                  </li> -->
+                </ul>
+              </div>
             </div>
-            <div class = "row align-items-center">
+            <!-- <div class = "row align-items-center">
               <div class = "col-sm-12">
                 <p>
                   <ul>
                     <li>
-                        Job creation
+                        Confirmed economic growth
                     </li>
                     <li>
-                        Wealth and revenue for Government
+                        No demonstrated negative effects on crime, population, or employment.
                     </li>
                     <li>
                         Reduction in crime and black market activities
@@ -71,7 +87,7 @@
                   </ul>
                 </p>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="footer">
             <p> &#169;Copyright Group: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
