--- a/templates/statisticalAnalysis.html
+++ b/templates/statisticalAnalysis.html
@@ -39,62 +39,106 @@
         </ul>
       </div>
     </div>
-  </nav>
-  
+</nav>
+
   <!-- Page Content -->
 
-  <div class="jumbotron">
-      <div class="row">
-          <div class="container">
-              <div class="col-md-12">
-                  <div style="float: left">
-                  <h1>Statistical Analysis</h1>
-                  <h3> Comparison of population changes across states that have legalized marijuana </h3>
-            
-                  <div>
-                    <img src="../Images/6-RateOfChange.png" alt="Rate of Change" width="500" />
-                    <p>
-                    The heatmap shows that year and value are linearly correlated, therefore we can use linear regression to determine average rate of change in population.
-                    </p>
-                  </div>
-                  <h2>Comparison of Population changes</h2>
-                  <p>
-                     <img  width="500" src="../Images/8-Colorado_pop_change.png" alt="Colorado Population Change">
-                  </p>
-                  <p>
-                      <img width="500" src="../Images/14-Washington_pop_change.png" alt="Washington Population Change">
-                  </p>
-                  <p>
-                    <img width="500" src="../Images/10-Oregon_pop_change.png" alt="Oregon Population Change">
-                  </p>
-                  <p>
-                      <img width="500" src="../Images/12-Texas_pop_change.png" alt="Texas Population Change">
-                  </p>
-                  <h2>Comparison of GDP changes</h2>
-                  <p>
-                    <img  width="500" src="../Images/7-Colorado_gdp_change.png" alt="Colorado GDP Change">
-                  </p>
-                  <p>
-                  <img  width="500" src="../Images/13-Washington_gdp_change.png" alt="Washington GDP Change">
-                 </p>
-                 <p>
-                  <img  width="500" src="../Images/9-Oregon_gdp_change.png" alt="Oregon GDP Change">
-                </p>
-                <p>
-                  <img  width="500" src="../Images/11-Texas_gdp_change.png" alt="Texas GDP Change">
-                </p>
-                 </div>
-              </div>
+<!-- <div class="jumbotron">
+    <div class="row">
+      <div class="col-md-12">
+          <div style="float: center">
+            <h1>Statistical Analysis</h1>
           </div>
       </div>
-  </div> 
-  
-  <!-- /.container -->
-
-  <div class="footer">
-      <p> &#169;Copyright Group: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
+    </div>
   </div>
-  
+</div> -->
+<div class="container-fluid"></div>
+  <div class = "row">
+    <div class = "col-md-12">
+        <h3 class="text-center">Data Exploration</h3>
+    </div>
+  </div>
+  <div class ="row">
+    <div class = "col-md-6 need_border">
+      <div class = "container-fluid holder">
+        <img  width="500" src="../Images/heatmap1.png" alt="Colorado Population Change">
+      </div>
+    </div>
+    <div class = "col-md-6 need_border">
+      <div class = "container-fluid holder">
+        <img width="500" src="../Images/heatmap2.png" alt="Washington Population Change">
+      </div>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col-md-12">
+        <h3 class="text-center">Comparison of Population changes</h3>
+    </div>
+  </div>
+  <div class ="row">
+    <div class = "col-md-6 need_border">
+        <div class = "container-fluid holder">
+          <img  width="500" src="../Images/8-Colorado_pop_change.png" alt="Colorado Population Change">
+        </div>
+    </div>
+    <div class = "col-md-6 need_border">
+      <div class = "container-fluid holder">
+        <img width="500" src="../Images/14-Washington_pop_change.png" alt="Washington Population Change">
+      </div>
+    </div>
+  </div>
+  <div class ="row">
+    <div class = "col-md-6 need_border">
+      <div class = "container-fluid holder">
+        <img width="500" src="../Images/10-Oregon_pop_change.png" alt="Oregon Population Change">
+      </div>
+    </div>
+    <div class = "col-md-6 need_border">
+      <div class = "container-fluid holder">
+        <img width="500" src="../Images/12-Texas_pop_change.png" alt="Texas Population Change">
+      </div>
+    </div>
+  </div>
+      <br>
+      <br>
+  <div class = "row">
+    <div class = "col-md-12">
+      <h3 class="text-center">Comparison of GDP changes</h3>
+    </div>
+  </div>
+  <div class ="row">
+    <div class = "col-md-6 need_border">
+      <div class = "container-fluid holder">
+        <img  width="500" src="../Images/7-Colorado_gdp_change.png" alt="Colorado GDP Change">
+      </div>
+    </div>
+    <div class = "col-md-6 need_border">
+      <div class = "container-fluid holder">
+        <img  width="500" src="../Images/13-Washington_gdp_change.png" alt="Washington GDP Change">
+      </div>
+    </div>
+  </div>
+  <div class ="row">
+    <div class = "col-md-6 need_border">
+      <div class = "container-fluid holder">
+        <img  width="500" src="../Images/9-Oregon_gdp_change.png" alt="Oregon GDP Change">
+      </div>
+    </div>
+    <div class = "col-md-6 need_border">
+      <div class = "container-fluid holder">
+        <img  width="500" src="../Images/11-Texas_gdp_change.png" alt="Texas GDP Change">
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- /.container -->
+
+<div class="footer">
+    <p> &#169;Copyright Group: Bowie Hand, Darya Rudych, Jessica Serna, Lu Wang, Shweta Banerjee, Yedidya Erque- 2018</p>
+</div>
+
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <!-- <script src="js/bootstrap.min.js"></script> -->
